# so-threads

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  dependencies.sh
include/: operations.h
src/: main.cpp  operations.cpp
